client/scss/containerStyles.scss
@import 'colors';

#root {
    margin: 0 auto;
    height: 100vh;
    width: auto;
    overflow-x: hidden;
    overflow-y: scroll;
    background: linear-gradient(to left, #1d976c, #93f9b9);
}

.primary {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.entryBox {
    margin-top: 3em;
}

form {
    display: inline-flex;
    gap: 3em;
}

input {
    margin-left: 1em;
}

.setBox {
    margin-top: 2em;
}

#add {
    background-color: $addButton;
    border-radius: 3px;
    border-width: 1.5px;
}

#vibes {
    background-color: lighten($addButton, 5%);
    margin-left: .5em;
    border-radius: 3px;
    border-width: 1.5px;
}

.songName{
    
}   

.names {
    font-weight: bold;
}

.songKey {

}

.keys {
    font-weight: bold;
}

.songLength {

}

.lengths {
    font-weight: bold;
}

.container {
    border: 1px solid black;
    margin-top: 2em;
    display: inline-flex;
    min-width: 72em;
    max-width: 72em;
    overflow-x: hidden;
    overflow-wrap: normal;
}

// This section is tricky because we absolutely have to have the class names be numbers and css hates that
[class="1A"], [class="1B"] {
    background-color: rgb(5, 196, 148);
    border: 1px solid black;
    min-width: 18em;
    max-width: 18em;
    justify-content: center;
}

[class="2A"], [class="2B"] {
    background-color: lime;
    border: 1px solid black;
    min-width: 18em;
    max-width: 18em;
    justify-content: center;
}

[class="3A"], [class="3B"] {
    background-color: rgb(251, 255, 0);
    border: 1px solid black;
    min-width: 18em;
    max-width: 18em;
    justify-content: center;
}

[class="4A"], [class="4B"] {
    background-color: orange;
    border: 1px solid black;
    min-width: 18em;
    max-width: 18em;
    justify-content: center;
}

[class="5A"], [class="5B"] {
    background-color: salmon;
    border: 1px solid black;
    min-width: 18em;
    max-width: 18em;
    text-align: center;
}

[class="6A"], [class="6B"] {
    background-color: palevioletred;
    border: 1px solid black;
    min-width: 18em;
    max-width: 18em;
    justify-content: center;
}

[class="7A"], [class="7B"] {
    background-color: plum;
    border: 1px solid black;
    min-width: 18em;
    max-width: 18em;
    justify-content: center;
}

[class="8A"], [class="8B"] {
    background-color: violet;
    border: 1px solid black;
    min-width: 18em;
    max-width: 18em;
    text-align: center;
}

[class="9A"], [class="9B"] {
    background-color: rgb(159, 4, 159);
    border: 1px solid black;
    min-width: 18em;
    max-width: 18em;
    justify-content: center;
}

[class="10A"], [class="10B"] {
    background-color: blueviolet;
    border: 1px solid black;
    min-width: 18em;
    max-width: 18em;
    justify-content: center;
}

[class="11A"], [class="11B"] {
    background-color: rgb(220, 220, 244);
    border: 1px solid black;
    min-width: 18em;
    max-width: 18em;
    justify-content: center;
}

[class="12A"], [class="12B"] {
    background-color: rgb(6, 234, 234);
    border: 1px solid black;
    min-width: 18em;
    max-width: 18em;
    justify-content: center;
}

